Replace unmodifiable collection creation with collection factory methods