@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2022 the original author or authors.
+ * Copyright 2006-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -239,7 +239,7 @@ public class JobExecution extends Entity {
 	 * @return the step executions that were registered.
 	 */
 	public Collection<StepExecution> getStepExecutions() {
-		return Collections.unmodifiableList(new ArrayList<>(stepExecutions));
+		return List.copyOf(stepExecutions);
 	}
 
 	/**
